# Labor_ITEC_Julian_Richi

./: CMakeLists.txt  test.txt
.devcontainer/: devcontainer.json
doc/: Extract_method.md
src/: .~lock.daten.csv#  aufgabe1.c  daten.csv  itec.c  itec.h  main.c  printHist_main.c  swap_main.c
